Fixed a div overlap.

--- a/home.css
+++ b/home.css
@@ -268,7 +268,7 @@ a:visited {
 #mainphoto div {
 
 	position: absolute;
-	top: 126px;
+	top: 122px;
 	left: 0;
 	width: auto;
 	max-height:90px;
